// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render deprecated parameters 1`] = `
<div
  className="web-api-params"
>
  <table>
    <tbody />
  </table>
</div>
`;

exports[`should render deprecated key 1`] = `
<div
  className="web-api-params"
>
  <table>
    <tbody>
      <tr>
        <td
          className="markdown"
          style={
            Object {
              "width": 180,
            }
          }
        >
          <code>
            foo
          </code>
          <div
            className="little-spacer-top"
          >
            <code>
              foo-deprecated
            </code>
          </div>
          <div
            className="little-spacer-top"
          >
            <DeprecatedBadge
              since="5.0"
            />
          </div>
          <div
            className="note little-spacer-top"
          >
            optional
          </div>
        </td>
        <td>
          <div
            className="markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        </td>
        <td
          style={
            Object {
              "width": 250,
            }
          }
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`should render deprecated parameters 1`] = `
<div
  className="web-api-params"
>
  <table>
    <tbody>
      <tr>
        <td
          className="markdown"
          style={
            Object {
              "width": 180,
            }
          }
        >
          <code>
            foo
          </code>
          <div
            className="little-spacer-top"
          >
            <DeprecatedBadge
              since="5.0"
            />
          </div>
          <div
            className="note little-spacer-top"
          >
            optional
          </div>
        </td>
        <td>
          <div
            className="markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        </td>
        <td
          style={
            Object {
              "width": 250,
            }
          }
        />
      </tr>
    </tbody>
  </table>
</div>
`;
